--- a/Week 1/Task1.html
+++ b/Week 1/Task1.html
@@ -1,1 +1,30 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>The Hidden Symphony of Nature</title>
+    <style>
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background-color: #f4f9f4;
+            color: #2c3e50;
+            margin: 40px;
+            line-height: 1.6;
+        }
+        h1 {
+            color: #2980b9;
+        }
+    </style>
+</head>
+<body>
+
+    <h1>The Hidden Symphony of Nature</h1>
+
+    <p>Every leaf, every gust of wind, and every silent dawn is part of an intricate symphony that most of us overlook. Beyond the visible, nature hums with patterns — from the golden ratio spirals of sunflowers to the synchronized flashing of fireflies across distant fields.</p>
+
+    <p>When we slow down and observe, the world reveals its hidden music, composed not in notes, but in rhythms of growth, decay, and renewal. Understanding this silent song deepens not only our appreciation of the environment but also our connection to the planet we call home.</p>
+
+</body>
+</html>
 
