--- a/Week 1/Task2.html
+++ b/Week 1/Task2.html
@@ -1,1 +1,51 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Wonders Beneath the Waves</title>
+    <style>
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background-color: #eef7fa;
+            color: #1c2833;
+            margin: 40px;
+            line-height: 1.6;
+            text-align: center;
+        }
+        h1 {
+            color: #117a8b;
+        }
+        .image-container {
+            margin: 30px auto;
+        }
+        .image-container img {
+            max-width: 80%;
+            height: auto;
+            border-radius: 12px;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.15);
+        }
+        .caption {
+            margin-top: 8px;
+            font-style: italic;
+            color: #555;
+        }
+    </style>
+</head>
+<body>
+
+    <h1>Wonders Beneath the Waves</h1>
+
+    <p>The ocean holds mysteries deeper than imagination. From vibrant coral cities teeming with life to bioluminescent creatures illuminating the midnight waters, each layer of the sea tells its own story of survival, beauty, and endless adaptation.</p>
+
+    <div class="image-container">
+        <img src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e?ixlib=rb-4.0.3&auto=format&fit=crop&w=1350&q=80" 
+             alt="Underwater Scene">
+        <div class="caption">An enchanting world that thrives silently beneath the surface.</div>
+    </div>
+
+    <p>Exploring these submerged landscapes reveals not only the ocean's power but also its fragility. Protecting this blue frontier is essential for the balance of life on Earth, ensuring its wonders endure for generations to come.</p>
+
+</body>
+</html>
 
