--- a/Week 1/Task3.html
+++ b/Week 1/Task3.html
@@ -1,1 +1,64 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>The Art of Morning Silence</title>
+    <style>
+        body {
+            background-color: #f7f5f0;
+            color: #2d3436;
+            margin: 40px;
+            text-align: center;
+        }
+        h1 {
+            color: #6c5ce7;
+            font-family: 'Georgia', serif;
+        }
+        .image-container {
+            margin: 30px auto;
+        }
+        .image-container img {
+            max-width: 80%;
+            height: auto;
+            border-radius: 12px;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+        }
+        .caption {
+            margin-top: 8px;
+            font-style: italic;
+            color: #636e72;
+        }
+        p:nth-of-type(1) {
+            font-family: 'Courier New', Courier, monospace;
+            line-height: 1.8;
+            text-align: justify;
+            margin: 20px auto;
+            max-width: 800px;
+        }
+        p:nth-of-type(2) {
+            font-family: 'Verdana', Geneva, Tahoma, sans-serif;
+            line-height: 1.5;
+            text-align: left;
+            margin: 20px auto;
+            max-width: 800px;
+        }
+    </style>
+</head>
+<body>
+
+    <h1>The Art of Morning Silence</h1>
+
+    <p>At dawn, the world pauses. The rustling leaves stand still, the sky blushes gently, and even the air hesitates before beginning its daily dance. In these fleeting moments of silence, the mind finds its rarest companion — clarity without effort.</p>
+
+    <div class="image-container">
+        <img src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?ixlib=rb-4.0.3&auto=format&fit=crop&w=1350&q=80" 
+             alt="Morning Sunrise Landscape">
+        <div class="caption">A morning moment where silence speaks louder than words.</div>
+    </div>
+
+    <p>Embracing the stillness of morning helps cultivate patience in the busiest hours of the day. Like the slow unfolding of petals, a silent start allows thoughts to bloom with intention rather than haste.</p>
+
+</body>
+</html>
