--- a/Week 1/Task2.html
+++ b/Week 1/Task2.html
@@ -1,51 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wonders Beneath the Waves</title>
-    <style>
-        body {
-            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-            background-color: #eef7fa;
-            color: #1c2833;
-            margin: 40px;
-            line-height: 1.6;
-            text-align: center;
-        }
-        h1 {
-            color: #117a8b;
-        }
-        .image-container {
-            margin: 30px auto;
-        }
-        .image-container img {
-            max-width: 80%;
-            height: auto;
-            border-radius: 12px;
-            box-shadow: 0 4px 10px rgba(0,0,0,0.15);
-        }
-        .caption {
-            margin-top: 8px;
-            font-style: italic;
-            color: #555;
-        }
-    </style>
+    <title>My Beach Page</title>
 </head>
-<body>
+<body style="background-color: lightblue; font-family: Arial; text-align: center;">
 
-    <h1>Wonders Beneath the Waves</h1>
+    <h1>Welcome to the Beach!</h1>
 
-    <p>The ocean holds mysteries deeper than imagination. From vibrant coral cities teeming with life to bioluminescent creatures illuminating the midnight waters, each layer of the sea tells its own story of survival, beauty, and endless adaptation.</p>
+    <p>
+        The beach is a fun place where you can feel the soft sand and hear the waves. 
+        You can swim, make sandcastles, or just relax under the sun.
+    </p>
 
-    <div class="image-container">
-        <img src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e?ixlib=rb-4.0.3&auto=format&fit=crop&w=1350&q=80" 
-             alt="Underwater Scene">
-        <div class="caption">An enchanting world that thrives silently beneath the surface.</div>
-    </div>
+    <p>
+        I love the beach because it is peaceful and beautiful. 
+        The sound of the ocean makes me feel happy and calm.
+    </p>
 
-    <p>Exploring these submerged landscapes reveals not only the ocean's power but also its fragility. Protecting this blue frontier is essential for the balance of life on Earth, ensuring its wonders endure for generations to come.</p>
+    <img src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=60" 
+         alt="Beautiful Beach" 
+         style="display: block; margin: 0 auto; width: 60%; border-radius: 10px;">
+
+    <p style="font-style: italic;">A peaceful view of the beach. Photo by <a href="https://unsplash.com/@seefromthesky" target="_blank">Ishan</a> on Unsplash.</p>
 
 </body>
 </html>
-
