--- a/Week 1/Task3.html
+++ b/Week 1/Task3.html
@@ -40,7 +40,7 @@
          style="display: block; margin: 0 auto; width: 60%; border-radius: 10px;">
 
     <p class="caption">
-        A peaceful view of the beach. Photo by <a href="https://unsplash.com/@seefromthesky" target="_blank">Ishan</a> on Unsplash.
+        A peaceful view of the beach.
     </p>
 
 </body>
