--- a/Week 1/Task4.html
+++ b/Week 1/Task4.html
@@ -1,1 +1,69 @@
+<!DOCTYPE html>
+<html>
+<head>
+    <title>My Beach Page</title>
+    <style>
+        p {
+            line-height: 1.6;
+        }
+
+        .para1 {
+            font-family: 'Arial', sans-serif;
+            text-align: left;
+        }
+        .para2 {
+            font-family: 'Georgia', serif;
+            text-align: center;
+        }
+        .caption {
+            font-family: 'Courier New', monospace;
+            text-align: right;
+            font-style: italic;
+        }
+
+        .btn {
+            background-color: #0077b6;  
+            color: white;               
+            padding: 15px 30px;         
+            border: 2px solid #005f73; 
+            border-radius: 5px;         
+            font-size: 16px;            
+            cursor: pointer;           
+            text-align: center;         
+            text-decoration: none;      
+            display: inline-block;      
+        }
+
+        .btn:hover {
+            background-color: #005f73;  
+            border-color: #004d60;      
+        }
+    </style>
+</head>
+<body style="background-color: lightblue; font-family: Arial; text-align: center;">
+
+    <h1>Welcome to the Beach!</h1>
+
+    <p class="para1">
+        The beach is a fun place where you can feel the soft sand and hear the waves. 
+        You can swim, make sandcastles, or just relax under the sun.
+    </p>
+
+    <p class="para2">
+        I love the beach because it is peaceful and beautiful. 
+        The sound of the ocean makes me feel happy and calm.
+    </p>
+
+    <img src="https://images.unsplash.com/photo-1507525428034-b723cf961d3e?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=60" 
+         alt="Beautiful Beach" 
+         style="display: block; margin: 0 auto; width: 60%; border-radius: 10px;">
+
+    <p class="caption">
+        A peaceful view of the beach. 
+    </p>
+
+    <a href="#" class="btn">Explore the Beach</a>
+
+</body>
+</html>
 
